--- a/project-client/index.html
+++ b/project-client/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>The Book List</title>
 </head>
 <body>
+    <script id="id" type="text/handlebars">
     
+    </script>
 </body>
 </html>
