fill in book.js

--- a/project-client/index.html
+++ b/project-client/index.html
@@ -7,8 +7,10 @@
     <title>The Book List</title>
 </head>
 <body>
-    <script id="id" type="text/handlebars">
+    <script id="book-template" type="text/handlebars">
     
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 </body>
 </html>
