--- a/project-client/index.html
+++ b/project-client/index.html
@@ -12,5 +12,10 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+    <script src="scripts/models/book.js"></script>
+    <script src="scripts/views/bookView.js"></script>
+    <script>
+        app.Book.fetchAll(app.bookView.initIndexPage);
+    </script>
 </body>
 </html>
