--- a/project-client/index.html
+++ b/project-client/index.html
@@ -15,10 +15,17 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
-    <script src="scripts/models/book.js"></script>
-    <script src="scripts/views/bookView.js"></script>
     <script>
-        app.Book.fetchAll(app.bookView.initIndexPage);
+        const API_URL = window.location.protocol === 'https:'
+        ? 'https://rm-kh-book-list.herokuapp.com/api/v1'
+        : 'http://localhost:3000/api/v1';
+        
+        window.module = {};
+        </script>
+        <script src="scripts/models/book.js"></script>
+        <script src="scripts/views/bookView.js"></script>
+    <script>
+        module.Book.fetchAll(module.bookView.initIndexPage);
     </script>
 </body>
 </html>
