--- a/project-client/index.html
+++ b/project-client/index.html
@@ -5,18 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta https-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/vendor/normalize.css">
-    <link rel="stylesheet" href="styles/vendor/skeleton.css">
+    <!-- <link rel="stylesheet" href="styles/vendor/skeleton.css"> -->
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
     <title>The Book List</title>
 </head>
 <body>
+    <header>
+        <h1>The Book List</h1>
+    </header>
+    <main>
     <section id="booklist">
-        <ul></ul>
+        <h2>My Books</h2>
     </section>
+    </main>
+
+    <footer>
+
+    </footer>
+
+
+    
     <script id="book-template" type="text/handlebars">
-    <li>{{title}} by {{author}}</li>
+        <article>
+            <img src="" alt="">
+            <div class="book-headers">
+                <h3>{{title}}</h3>
+                <h4>{{author}}</h4>
+            </div>
+        </article>
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
