--- a/project-client/index.html
+++ b/project-client/index.html
@@ -15,15 +15,33 @@
     <header>
         <h1>The Book List</h1>
     </header>
+
     <main>
     <section id="booklist">
         <h2>My Books</h2>
     </section>
     </main>
 
-    <footer>
+    <section id="book-new-view">
+        <form id="add-book">
+            <label for="title">
+                <input type="text" id="book-title" name="title" placeholder="title" required>
+            </label>
+            <label for="author">
+                <input type="text" id="book-author" name="author" placeholder="author" required>
+            </label>
+            <label for="isbn">
+                <input type="text" id="book-isbn" name="isbn" placeholder="isbn" required>
+            </label>
+            <label for="img-url">
+                <input type="text" id="book-img-url" name="img-url" placeholder="image url" required>
+            </label>
+            <textarea id="description" rows="8" placeholder="description..." required></textarea>
+            <button type="submit">submit</button>            
+        </form>
+    </section>
 
-    </footer>
+    <footer></footer>
 
 
     
