--- a/project-client/index.html
+++ b/project-client/index.html
@@ -36,7 +36,7 @@
             <label for="img-url">
                 <input type="text" id="book-img-url" name="img-url" placeholder="image url" required>
             </label>
-            <textarea id="description" rows="8" placeholder="description..." required></textarea>
+            <textarea id="description" rows="8" placeholder="description..." name="description" required></textarea>
             <button type="submit">submit</button>            
         </form>
     </section>
