--- a/project-client/index.html
+++ b/project-client/index.html
@@ -56,6 +56,7 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+    <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
     <script>
         const API_URL = window.location.protocol === 'https:'
         ? 'https://rm-kh-book-list.herokuapp.com/api/v1'
@@ -65,8 +66,5 @@
         </script>
         <script src="scripts/models/book.js"></script>
         <script src="scripts/views/bookView.js"></script>
-    <script>
-        module.Book.fetchAll(module.bookView.initIndexPage);
-    </script>
 </body>
 </html>
