--- a/project-client/index.html
+++ b/project-client/index.html
@@ -14,15 +14,16 @@
 <body>
     <header>
         <h1>The Book List</h1>
+        <a href="/books/new">Add Books</a>
     </header>
 
     <main>
-    <section id="booklist">
+    <section id="booklist" class="view">
         <h2>My Books</h2>
+        <div id="books"></div>
     </section>
-    </main>
 
-    <section id="book-new-view">
+    <section id="book-new-view" class="view">
         <form id="add-book">
             <label for="title">
                 <input type="text" id="book-title" name="title" placeholder="title" required>
@@ -40,6 +41,7 @@
             <button type="submit">submit</button>            
         </form>
     </section>
+    </main>
 
     <footer></footer>
 
@@ -66,5 +68,6 @@
         </script>
         <script src="scripts/models/book.js"></script>
         <script src="scripts/views/bookView.js"></script>
+        <script src="scripts/app.js"></script>
 </body>
 </html>
