--- a/project-client/index.html
+++ b/project-client/index.html
@@ -3,54 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta https-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/vendor/normalize.css">
-    <!-- <link rel="stylesheet" href="styles/vendor/skeleton.css"> -->
+    <link rel="stylesheet" href="styles/icons.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
     <title>The Book List</title>
 </head>
 <body>
+
     <header>
         <h1>The Book List</h1>
-        <nav>
-            <a href="/books/new">Add Books</a>
-            <a href="/home">Home</a>
-        </nav>
+        <div class="icon-hamburger"></div>
     </header>
 
     <main>
-    <section id="booklist" class="view">
-        <h2>My Books</h2>
-        <div id="books"></div>
-    </section>
+        <nav>
+            <a href="/home">View All Books</a>
+            <a href="/books/new">Add A New Book</a>
+        </nav>
 
-    <section id="book-new-view" class="view">
-        <form id="add-book">
-            <label for="title">
-                <input type="text" id="book-title" name="title" placeholder="title" required>
-            </label>
-            <label for="author">
-                <input type="text" id="book-author" name="author" placeholder="author" required>
-            </label>
-            <label for="isbn">
-                <input type="text" id="book-isbn" name="isbn" placeholder="isbn" required>
-            </label>
-            <label for="img-url">
-                <input type="text" id="book-img-url" name="img-url" placeholder="image url" required>
-            </label>
-            <textarea id="description" rows="8" placeholder="description..." name="description" required></textarea>
-            <button type="submit">submit</button>            
-        </form>
-    </section>
+        <section class="content">
+            <section id="booklist" class="view">
+                <h2>My Books</h2>
+                <div id="books"></div>
+            </section>
 
-    <section id="book-detail-view" class="view"></section>
+            <section id="book-new-view" class="view">
+                <h2>Add a New Book</h2>                
+                <form id="add-book">
+                    <label for="book-title">
+                        <input type="text" id="book-title" name="title" placeholder="title" required>
+                    </label>
+                    <label for="book-author">
+                        <input type="text" id="book-author" name="author" placeholder="author" required>
+                    </label>
+                    <label for="book-isbn">
+                        <input type="text" id="book-isbn" name="isbn" placeholder="isbn" required>
+                    </label>
+                    <label for="book-img-url">
+                        <input type="text" id="book-img-url" name="img-url" placeholder="image url" required>
+                    </label>
+                    <textarea id="description" rows="8" placeholder="description..." name="description" required></textarea>
+                    <button type="submit">submit</button>            
+                </form>
+            </section>
+
+            <section id="book-detail-view" class="view"></section>
+        </section>
     </main>
 
-    <footer></footer>
+    <footer><a href="https://github.com/RM-KH-book-list" target="_blank" class="icon-github"></a></footer>
 
     <script id="book-template" type="text/handlebars">
+        <article class="book-listing">
             <a href="/books/{{book_id}}">
                 <div class="book-headers">
                     <h3>{{title}}</h3>
@@ -58,17 +64,16 @@
                 </div>
                 <img src="{{image_url}}" alt="cover image">
             </a>
+        </article>
     </script>
 
     <script id="book-detail-template" type="text/handlebars">
         <article>
-            <div class="book-headers">
-                <h3>{{title}}</h3>
-                <h4>{{author}}</h4>
-                <h4>{{isbn}}</h4>
-                </div>
-                <img src="{{image_url}}" alt="cover image">
-                <p>{{description}}</p>
+            <h2>{{title}}</h2>
+            <h4>{{author}}</h4>
+            <img src="{{image_url}}" alt="cover image">
+            <p>{{description}}</p>
+            <h4>{{isbn}}</h4>
         </article>
     </script>
 
