add delete button

--- a/project-client/index.html
+++ b/project-client/index.html
@@ -49,7 +49,10 @@
                 </form>
             </section>
 
-            <section id="book-detail-view" class="view"></section>
+            <section id="book-detail-view" class="view">
+                <div id="book-details"></div>
+                <button id="delete-button">delete</button>
+            </section>
         </section>
     </main>
 
