update button wired to empty update page

--- a/project-client/index.html
+++ b/project-client/index.html
@@ -52,6 +52,7 @@
             <section id="book-detail-view" class="view">
                 <div id="book-details"></div>
                 <button id="delete-button">delete</button>
+                <button id="update-button">update</button>
             </section>
         </section>
     </main>
