--- a/project-client/index.html
+++ b/project-client/index.html
@@ -21,6 +21,7 @@
         <nav>
             <a href="/home">View All Books</a>
             <a href="/books/new">Add A New Book</a>
+            <a href="/login">Admin Login</a>
         </nav>
 
         <section class="content">
@@ -53,6 +54,16 @@
                 <div id="book-details"></div>
                 <button id="delete-button">delete</button>
                 <button id="update-button">update</button>
+            </section>
+
+            <section id="admin-view">
+                <form id="admin-form">
+                    <label for="passphrase">
+                            <input type="text" id="passphrase" name="passphrase" required>
+                    </label>
+                    <button type="submit">submit</button>            
+                </form>
+                <h4 id="logged-in">You Are Now Logged In</h4>
             </section>
         </section>
     </main>
@@ -92,7 +103,9 @@
         window.module = {};
         </script>
         <script src="scripts/models/book.js"></script>
+        <script src="scripts/models/user.js"></script>
         <script src="scripts/views/book-view.js"></script>
+        <script src="scripts/views/login-view.js"></script>
         <script src="scripts/app.js"></script>
 </body>
 </html>
