work on passphrase

--- a/project-client/index.html
+++ b/project-client/index.html
@@ -52,11 +52,13 @@
 
             <section id="book-detail-view" class="view">
                 <div id="book-details"></div>
-                <button id="delete-button">delete</button>
-                <button id="update-button">update</button>
+                <div id="admin-actions">
+                    <button id="delete-button">delete</button>
+                    <button id="update-button">update</button>
+                </div>
             </section>
 
-            <section id="admin-view">
+            <section id="admin-view" class="view">
                 <form id="admin-form">
                     <label for="passphrase">
                             <input type="text" id="passphrase" name="passphrase" required>
