--- a/project-client/index.html
+++ b/project-client/index.html
@@ -61,7 +61,7 @@
             <section id="admin-view" class="view">
                 <form id="admin-form">
                     <label for="passphrase">
-                            <input type="text" id="passphrase" name="passphrase" required>
+                            <input type="text" id="passphrase" placeholder="enter your passphrase" name="passphrase" required>
                     </label>
                     <button type="submit">submit</button>            
                 </form>
