--- a/project-client/index.html
+++ b/project-client/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h1>The Book List</h1>
+        <a href="/home"><h1>The Book List</h1></a>
         <div class="icon-hamburger"></div>
     </header>
 
@@ -23,7 +23,7 @@
             <a href="/books/new">Add A New Book</a>
             <a href="/login">Admin Login</a>
         </nav>
-
+        
         <section class="content">
             <section id="booklist" class="view">
                 <h2>My Books</h2>
@@ -65,7 +65,7 @@
                     </label>
                     <button type="submit">submit</button>            
                 </form>
-                <h4 id="logged-in">You Are Now Logged In</h4>
+                <h4 id="logged-in">Admin Powers Enabled</h4>
             </section>
         </section>
     </main>
