begin book search

--- a/project-client/index.html
+++ b/project-client/index.html
@@ -67,6 +67,23 @@
                 </form>
                 <h4 id="logged-in">Admin Powers Enabled</h4>
             </section>
+
+            <section id="search-view" class="view">
+                <h2>Book Search</h2>
+                <form id="search-form">
+                    <label for="author-input">
+                            <input type="text" id="author-input" placeholder="author" name="author">
+                    </label>
+                    <label for="title-input">
+                            <input type="text" id="title-input" placeholder="title" name="title">
+                    </label>
+                    <label for="isbn-input">
+                            <input type="text" id="isbn-input" placeholder="isbn" name="isbn" required>
+                    </label>
+                    <button type="submit">search</button>            
+                </form>
+                <!-- <h4 id="logged-in">Admin Powers Enabled</h4> -->
+            </section>
         </section>
     </main>
 
