--- a/project-client/index.html
+++ b/project-client/index.html
@@ -19,7 +19,8 @@
 
     <main>
         <nav>
-            <a href="/home">View All Books</a>
+            <a href="/home">View My Books</a>
+            <a href="/books/search">Find More Books</a>
             <a href="/books/new">Add A New Book</a>
             <a href="/login">Admin Login</a>
         </nav>
@@ -69,7 +70,7 @@
             </section>
 
             <section id="search-view" class="view">
-                <h2>Book Search</h2>
+                <h2>Find More Books</h2>
                 <form id="search-form">
                     <label for="author-input">
                             <input type="text" id="author-input" placeholder="author" name="author">
@@ -78,11 +79,11 @@
                             <input type="text" id="title-input" placeholder="title" name="title">
                     </label>
                     <label for="isbn-input">
-                            <input type="text" id="isbn-input" placeholder="isbn" name="isbn" required>
+                            <input type="text" id="isbn-input" placeholder="isbn" name="isbn">
                     </label>
                     <button type="submit">search</button>            
                 </form>
-                <!-- <h4 id="logged-in">Admin Powers Enabled</h4> -->
+                <div id="search-results"></div>
             </section>
         </section>
     </main>
