--- a/project-client/index.html
+++ b/project-client/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
+    <link rel="icon" type="image/png" href="assets/favicon.png"> 
     <title>The Book List</title>
 </head>
 <body>
@@ -83,6 +84,7 @@
                     </label>
                     <button type="submit">search</button>            
                 </form>
+                <h4 id="search-error">nothing found</h4>
                 <div id="search-results"></div>
             </section>
         </section>
