--- a/project-client/index.html
+++ b/project-client/index.html
@@ -96,6 +96,7 @@
         <article class="book-listing">
             <a href="/books/{{book_id}}">
                 <div class="book-headers">
+                    <div class="icon-plus"></div>
                     <h3>{{title}}</h3>
                     <h4>{{author}}</h4>
                 </div>
