allow only number input for isbn

--- a/project-client/index.html
+++ b/project-client/index.html
@@ -42,7 +42,7 @@
                         <input type="text" id="book-author" name="author" placeholder="author" required>
                     </label>
                     <label for="book-isbn">
-                        <input type="text" id="book-isbn" name="isbn" placeholder="isbn #" required>
+                        <input type="number" id="book-isbn" name="isbn" placeholder="isbn #" required>
                     </label>
                     <label for="book-img-url">
                         <input type="text" id="book-img-url" name="img-url" placeholder="image url" required>
@@ -80,7 +80,7 @@
                             <input type="text" id="author-input" placeholder="author" name="author">
                     </label>
                     <label for="isbn-input">
-                            <input type="text" id="isbn-input" placeholder="isbn #" name="isbn">
+                            <input type="number" id="isbn-input" placeholder="isbn #" name="isbn">
                     </label>
                     <button type="submit">search</button>            
                 </form>
